set(TARGET ZibenSandbox)

file(GLOB_RECURSE HEADER_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.inl
)

file(GLOB_RECURSE SOURCE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp
)

#set_property(GLOBAL PROPERTY ZIBEN_INTERNAL TRUE)
#set_property(GLOBAL PROPERTY ZIBEN_ENABLE_PROFILING_INTERNAL TRUE)

#set(ZIBEN_ENABLE_PROFILING TRUE)
#
#message(STATUS "PROFILING sandbox: ${ZIBEN_ENABLE_PROFILING}")

#set(ZIBEN_ENABLE_PROFILING TRUE CACHE BOOL "ZibenEngine Param" FORCE)

include_directories(Source)

add_executable(${TARGET} ${HEADER_FILES} ${SOURCE_FILES})

target_link_libraries(${TARGET} PRIVATE Ziben::Engine)

file(COPY
        ${CMAKE_CURRENT_SOURCE_DIR}/Assets
    DESTINATION
        ${CMAKE_CURRENT_BINARY_DIR}
)